--- a/html/scss/partials/_common.scss
+++ b/html/scss/partials/_common.scss
@@ -123,13 +123,15 @@ button.close_button {
 main {
 	display: flex;
 	align-items: center;
+	width:100%;
+	height:100%;
 }
 div#background {
 	position: fixed;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-size: cover;
-	background-position: center;
+	background-position: top right;
 	filter: blur(5px);
 }
 //forms
