--- a/html/scss/partials/_preview.scss
+++ b/html/scss/partials/_preview.scss
@@ -9,11 +9,11 @@
 }
 
 canvas#preview {
-	width:100vw;
+	width:100%;
 }
 #preview_container {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-size: cover;
 	background-position: center;
 	display: flex;
@@ -134,13 +134,13 @@ main[data-status='video'] {
 @media (orientation: landscape) {
 	canvas#preview {
 		width: auto;
-		height: 100vh;
+		height: 100%;
 	}
 	div#camera_buttons {
 		width: auto;
 		left: 0;
 		flex-direction: column;
-		height: 100vh;
+		height: 100%;
 		margin: 0 3vmin;
 	}
 }
